# Simulator_Task_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  COVERLETTER.md  README.md
data/: experiments.xml  experiments_config.xml  test_3hosts.xml  test_3hosts_tasks.csv  test_4hosts.xml  test_4hosts_tasks.csv
include/: config_parser.h  container.hpp  csv_parser.h  logger.hpp  models.h  simulator.hpp
src/: config_parser.cpp  csv_parser.cpp  main.cpp  simulator.cpp
tests/: edge_cases_test.cpp  performance_test.cpp
